--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="/bundle/classui.css">
+	<link rel="stylesheet" href="/bundle/Draft.css">
 	<link rel="stylesheet" href="/assets/Inconsolata.css">
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<title>CSE Code Ground</title>
@@ -17,6 +18,9 @@
 				CAVEAT: Responsive design is not possible :(
 			*/
 			max-width: inherit !important;
+		}
+		p {
+			margin: 15px 5px;
 		}
 	</style>
 </head>
