--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 	<div id="app"></div>
 	<script src="/assets/vs/loader.js"></script>
 	<script src="/bundle/bundle.js"></script>
-	<script src="/assets/canvas/global.js"></script>
+	<script src="/assets/canvas2d/global.js"></script>
 </body>
 </html>
