--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <body>
 	<div id="app"></div>
 	<script src="/assets/vs/loader.js"></script>
+	<script>
+		var monacoAmdRequire = require;
+	</script>
 	<script src="/bundle/bundle.js"></script>
 	<script src="/assets/canvas2d/global.js"></script>
 </body>
