--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/bundle/themes/classui.css">
+	<link rel="stylesheet" href="/bundle/themes/classui_flat.css">
 	<link rel="stylesheet" href="/bundle/Draft.css">
 	<link rel="stylesheet" href="/assets/Inconsolata.css">
 	<link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/assets/vs.css">
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<title>CSE Code Ground</title>
 	<style>
@@ -52,6 +53,7 @@
 	<script>
 		var monacoAmdRequire = require;
 	</script>
+	<script src="/bundle/GLOBALS.js"></script>
 	<script src="/bundle/bundle.js"></script>
 	<script src="/assets/canvas2d/global.js"></script>
 </body>
